# ai_doc_composer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt
projects/dublin/json/: plan.json  quality_report.json  tts_meta.json
projects/dublin_doc_gemini_xtts/json/: plan.json  project_metadata.json  tts_meta.json
projects/dublin_doc_gptoss_xtts/json/: plan.json  tts_meta.json
projects/dublin_memories_gemini_gemini/json/: plan.json  quality_report.json  tts_meta.json
projects/dublin_memories_gemini_xtts2/json/: clip_contexts.json  plan.json  project_metadata.json  quality_report.json  tts_meta.json
projects/dublin_memories_gptoss_xtts2/json/: captions.json  plan.json  project_metadata.json  quality_report.json  tts_meta.json
projects/dublin_vlog_gptoss_xtts/json/: plan.json  tts_meta.json
projects/porto_doc_gemini_xtts/json/: captions.json  clip_contexts.json  plan.json  project_metadata.json  quality_report.json  tts_meta.json
projects/porto_doc_gptoss_xtts/json/: plan.json  project_metadata.json  quality_report.json  tts_meta.json
projects/porto_vlog_gemini_xtts2/json/: plan.json  project_metadata.json  quality_report.json  tts_meta.json
scripts/: create_project_flavor.sh  setup_vibevoice.sh  sync_projects.sh
src/ai_doc_composer/: batch.py  benchmark.py  cache.py  cli.py  context.py  duplicate_prevention.py  ingest.py  plan.py  preprocess.py  quality.py  quota_manager.py  rate_limiter.py  render.py  stt.py  styles.py  tts.py  ui.py  validate.py
tests/: test_benchmark.py  test_cli.py  test_ingest.py  test_plan.py  test_quality.py  test_render.py  test_validation.py
(+41 files in other folders)
